--- a/project/HTML/Giraffe.html
+++ b/project/HTML/Giraffe.html
@@ -13,27 +13,27 @@
         justify-content: center;
         align-items: flex-start; /* Align items at the top */
         height: auto;
-        max-height: 400px; /* Set a maximum height for the container */
-        flex-wrap: wrap; /* Allow images to wrap if necessary */
-        margin-bottom: 20px; /* Add margin at the bottom to create space for the footer */
+        max-height: 400px; 
+        flex-wrap: wrap;
+        margin-bottom: 20px; 
     }
 
     .image-container img {
-        width: 270px; /* Set fixed width for the images */
+        width: 270px; 
         height: auto;
         margin: 10px; /* Add margin for spacing */
     }
 
     .image-container .image-text {
-        width: 200px; /* Set fixed width for the text containers */
+        width: 200px;
         text-align: left;
-        margin: 3000 10px; /* Reduce top and bottom margin */
+        margin: 3000 10px; 
         padding-top: 1px;
         font-size: 20px; /* Add padding to move text up */
     }
 
     footer {
-        clear: both; /* Clear floats */
+        clear: both;
     }
 </style>
 
