--- a/project/HTML/Octobus.html
+++ b/project/HTML/Octobus.html
@@ -109,6 +109,19 @@
             <img src="../Images/email.png" alt="Logo" class="sgmail">
             <p class="semail">creaturepedia@gmail.com</p>
      </div> 
+     <script>
+      //oct salma
+if(document.getElementById('image1'))
+image.addEventListener('mouseover', function() {
+  if(document.getElementById('image1'))
+  document.getElementById('image1').src = '../Images/Oct2.png';
+});
+if(document.getElementById('image1'))
+image.addEventListener('mouseout', function() {
+  if(document.getElementById('image1'))
+  document.getElementById('image1').src = '../Images/Oct3.jpg';
+});
+     </script>
 
 
 <script src="../JavaScript/script.js"></script>
