--- a/project/HTML/shark.html
+++ b/project/HTML/shark.html
@@ -8,17 +8,17 @@
 
 <body>
     <header>
-        <div class="navbar"><!--navigation bar-->
-            <img src="../Images/Creaturepedia.png" alt="Logo" class="logo"><!--logo-->
+        <div class="navbar">
+            <img src="../Images/Creaturepedia.png" alt="Logo" class="logo">
             <a href="./Home.html" class="nav-item">Home</a>
             <a href="#" class="nav-item">About</a>
-            <form action="#" class="search-form"><!--search bar-->
+            <form action="#" class="search-form">
                 <input type="text" placeholder="Search..." class="search-bar">
                 <button type="submit" class="search-button">Search</button>
                 <style>button {
                     position: fixed;
                     right: 600px;
-                    bottom: 5px; /* Removed extra semicolon */
+                    bottom: 5px; 
                     background-color: #91d0d7;
                     color: #f4f4f4;
                     border-color: #000;
@@ -164,7 +164,7 @@
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 100%;
-        color: aliceblue; /* Combined with previous declaration */
+        color: aliceblue; 
     }
     </style>
 
