--- a/project/HTML/index.HTML
+++ b/project/HTML/index.HTML
@@ -19,7 +19,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover; /* make sure the vide cover all page  */
-        z-index: -1; /* make sure the video is behind other content */
+        z-index: -1; 
     }
     #content {
         position: relative;
