--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a:hover, a:active {
 </head>
 <body class="custom-body-login">
     <video autoplay loop muted id="video-background">
-    <source src="./project/Media/flock-of-seagulls-in-the-sky.mp4" type="video/mp4">
+    <source src="flock-of-seagulls-in-the-sky.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 <div id="content">
