--- a/Eagle.html
+++ b/Eagle.html
@@ -120,8 +120,8 @@ document.addEventListener('DOMContentLoaded', function () {
     var backgroundIndex = 0;
     var backgrounds = [
         'linear-gradient(270deg, #9370DB 0%, #87CEEB 100%)', // Original background
-        'url("../Images/sky1 (1).webp") no-repeat center/cover', // Background image URL
-        'url("../Images/sky2.jpg") no-repeat center/cover', // Another background image URL
+        'url("sky1 (1).webp") no-repeat center/cover', // Background image URL
+        'url("sky2.jpg") no-repeat center/cover', // Another background image URL
     ];
     
     document.querySelector('.Echange-bg-button').addEventListener('click', function () {
