--- a/Turtle.html
+++ b/Turtle.html
@@ -46,7 +46,7 @@
 
 <p class="imges">
                
-                <img src="../Images/turtle1edited.png" alt="TurtleAudio" id="audioButtontuetle" style="float:left; cursor: pointer;" >
+                <img src="turtle1edited.png" alt="TurtleAudio" id="audioButtontuetle" style="float:left; cursor: pointer;" >
                 <audio id="audioturtle" src="turtle_sound.mp3" preload="auto"></audio>
 
                 
