--- a/Eagle.html
+++ b/Eagle.html
@@ -89,7 +89,7 @@
             </video></p>
             <h6>Eagle's Scream</h6>
             <p><audio controls>
-                <source src="../Media/eaglev.mp3" type="audio/mpeg">
+                <source src="eaglev.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio></p>
 </div>
