--- a/Penguin.html
+++ b/Penguin.html
@@ -8,17 +8,19 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="penguin-body">
-<header class="penguin-header">
-    <div class="navbar"><!--navagtion bar-->
-<img src="Creaturepedia.png" alt="Logo" class="logo"><!--logo-->
-<a href="./Home.html" class="nav-item">Home</a>
-<a href="#" class="nav-item">About</a>
-<form action="#" class="search-form"><!--search bar-->
-<input type="text" placeholder="Search..." class="search-bar">
-<button type="submit" class="search-button">Search</button>
-</form>
-    </div>  
-</header>
+    <body class="custom-body-polarbear">
+        <header class="headerld">
+            <div class="navbarld">
+            <img src="Creaturepedia.png" alt="Logo" class="logold">
+            <a href="./Home.html" class="nav-itemld">Home</a>
+            <a href="#" class="nav-itemld">About</a>
+            <form action="#" class="search-formld">
+            <input type="text" placeholder="Search..." class="search-barld">
+            <button type="submit" class="search-buttonld">Search</button>
+            </form>
+            </div>  
+        </header>
+    </div>
 <div class="containerP"> <!--left-section-->
     <section class="left-sectionP">
     <img src="penguins-1.jpg" alt="img-1">
@@ -29,7 +31,7 @@
         and some species can spend months  at sea.
         </p>
       <img src="penguin-2.jpg" alt="img-2">
-      <p onclick="this.innerHTML='Do u know that There are 18 species of penguin ?'">Click on this text!</p>
+      <p class="penguin-paragraph" onclick="this.innerHTML='Do u know that There are 18 species of penguin ?'">Click on this text!</p>
     </section>
     <section class="middle-sectionP"><!--middle-section-->
         <h1 class="penguin-lifespan">Lifespan</h1>
@@ -38,7 +40,7 @@
               There is a high mortality rate among the young. For example, the emperor chicks may experience a 90% mortality
               within the first year of life and about 50% of king penguin chicks will not survive due to winter starvation. </p>
       <video src="Penguin video.mp4" controls height="250" width="400"></video>
-      <p>To know me more check this website:<br><!--iframe website-->
+      <p class="penguin-paragraph">To know me more check this website:<br><!--iframe website-->
     Then listen to my voice :)</p> <!--penguin audio sound-->
       <iframe src="https://www.nationalgeographic.com/animals/facts/king-penguin" title="description"></iframe>
       <audio controls>
@@ -51,18 +53,18 @@
     <section class="right-sectionP"><!--righr-section-->
       <img src="penguin-4.jpg" alt="img-3">
       <h1 class="penguin-diet">Diet</h1>
-      <p>
+      <p class="penguin-paragraph">
         Penguins eat krill, squids, and fishes.
           Their diet varies slightly on the species of penguins, which have slightly different food preferences.
           This reduces competition among species.</p>
       <img src="penguin-3.jpg" alt="img-4">
-      <p onclick="this.innerHTML='Do u know that Penguins don’t  have teeth ?'">Click on this text!</p><!--on click java-->
+      <p class="penguin-paragraph" onclick="this.innerHTML='Do u know that Penguins don’t  have teeth ?'">Click on this text!</p><!--on click java-->
     </section>
   </div>
   
   
-  <footer> <!--footer-->
-    <a href="#" class="Rating">Give Us Your Feedback :)</a>
+  <footer class="penfooter">
+ <a href="./feedback.html" class="Rating">Give Us Your Feedback :)</a>
     <h3 class="contact">Contact Us: </h3>
     <img src="email.png" alt="Logo" class="gmail">
     <p class="email">creaturepedia@gmail.com</p> 
