--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="Creaturepedia.png">
     <script src="script.js"></script>
 </head>
 <body class="homebody">
@@ -60,7 +61,7 @@
     <div class="homefooter">
             <a href="./feedback.html" class="Rating">Rating</a>
             <h3 class="contact">Contact Us: </h3>
-            <img src="../Images/email.png" alt="Logo" class="gmail">
+            <img src="email.png" alt="Logo" class="gmail">
             <p class="email">creaturepedia@gmail.com</p> 
      </div> 
 </body>
