--- a/feedback.html
+++ b/feedback.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animal Feedback</title>
+    <title>Creaturepedia</title>
+    <link rel="icon" type="image/x-icon" href="Creaturepedia.png">
     <style>
         .feedbackS {
             font-family: Arial, sans-serif;
