--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ a:hover, a:active {
 <div id="content">
     <h1>Creaturepedia </h1>
     <p>Welcome to Creaturepedia,where every page tells a story.</p>
-    <form name="myForm" action="Home.html" class="loginform" onsubmit="return loginAndValidate()" method="post">
+    <form name="myForm" action="./Home.html" class="loginform" onsubmit="return loginAndValidate()" method="post">
         <h1 class="h1login">Login</h1>
         <label for="username">Username:</label>
         <input type="text" class="txtloging" id="username" name="username" placeholder="Enter your username:"><br>
