--- a/African Elephant.html
+++ b/African Elephant.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap" rel="stylesheet">
-     <link rel="icon" type="image/x-icon" href="logo-removebg.png">
+     <link rel="icon" type="image/x-icon" href="Creaturepedia.png">
 </head>
 <body>
     <header class="headerld">
