--- a/Eagle.html
+++ b/Eagle.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="Creaturepedia.png">
     <style>
         .Egenerate-button {
             padding: 20px 20px;
