--- a/Polar Bear.html
+++ b/Polar Bear.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Creaturepedia</title>
-<link rel="icon" type="image/x-icon" href="logo.png"> <!-- favicon by logo -->
+<link rel="icon" type="image/x-icon" href="Creaturepedia.png"> <!-- favicon by logo -->
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 </head>
