--- a/White Lion.html
+++ b/White Lion.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Creaturepedia</title>
+    <link rel="icon" type="image/x-icon" href="Creaturepedia.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
